--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <script type="text/javascript" src="players.js"></script>
 <script type="text/javascript" src="main.js"></script>
 <style type="text/css">
-  canvas { border: 0px solid black; width: 100%; }
+  body { margin: 0; }
+  canvas { border: 0; height: 99vh; }
   img.resource { display:none; }
 </style>
 <body onload="init()" text="#FFFFFF" bgcolor="#000000">
