--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <script type="text/javascript" src="main.js"></script>
 <style type="text/css">
   body { margin: 0; }
-  canvas { border: 0; height: 99vh; }
+  canvas { image-rendering: pixelated; border: 0; height: 99vh; }
   img.resource { display:none; }
 </style>
 <body onload="init()" text="#FFFFFF" bgcolor="#000000">
